src/App.css
* { margin: 0; padding: 0 }

.App {
  text-align: center;
}

.App-header {
  color: white;
  background-color: rgba(34,34,34,255);
  padding-bottom: 10px;
}

h1 {
  text-align: center;
  vertical-align: middle;
  line-height: 115px;
}

.text-field {
  margin-top: 25px;
  margin-bottom: 25px;
}

.card {
  margin-left: 700px;
  margin-right: 700px;
  margin-bottom: 10px;
  text-align: left;
  vertical-align: middle;
  border-style: solid;
  border-width: thin;
  border-color: rgba(grey);
}

.topLine {
  background: rgba(236, 236, 236);
  text-align: left;
  vertical-align: middle;
  padding-bottom: 15px;
  padding-top: 15px;
  line-height: 25px;  
}

ul {
  list-style-position: inside;
  position: relative;
  padding-top: 15px;
  padding-bottom: 15px;
}

li {
  padding-top: 5px;
  padding-bottom: 5px;
margin-left: 50px;
}

